<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/location"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp"
        android:text="Location"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/iconLocation"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconSearch"
        android:layout_width="29dp"
        android:layout_height="34dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/magnify"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/iconLocation"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map_marker"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>