...
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="31dp"
        android:text="Tippe eine Stadt ein"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/searchField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

...
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/GPSTV"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toEndOf="@+id/search_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/search_icon"
...
